@@ -98,6 +98,47 @@ and alternate device names.
 Prior to the Linux kernel 2.6 series these utilities could only use
 generic device names (e.g. /dev/sg1 ). In almost all cases in the Linux
 kernel 2.6 series, any device name can be used by these utilities.
+.SH WINDOWS DEVICE NAMING
+Storage and related devices can have several device names in Windows.
+Probably the most common in the volume name (e.g. "D:"). There are also
+a "class" device names such as "PhysicalDrive<n>", "CDROM<n>"
+and "TAPE<n>". <n> is an integer starting at 0 allocated in ascending
+order as devices are discovered (and sometimes rediscovered).
+.PP
+Some storage devices have a SCSI lower level device name which starts
+with a SCSI (pseudo) adapter name of the form "SCSI<n>:". To this is added
+sub\-addressing in the form of a "bus" number, a "target" identifier and
+a "lun" (logical unit number). The "bus" number is also known as a "PathId".
+These are assembled to form a device name of the
+form: "SCSI<n>:<bus>,<target>,<lun>". The trailing ",<lun>" may be omitted
+in which case a lun of zero is assumed. This lower level device name cannot
+often be used directly since Windows blocks attempts to use it if a class
+driver has "claimed" the device. There are SCSI device types (e.g.
+Automation/Drive interface type) for which there is no class driver. At
+least two transports ("bus types" in Windows jargon): USB and IEEE 1394 do
+not have a "scsi" device names of this form.
+.PP
+In keeping with DOS file system conventions, the various device names
+can be given in upper, lower or mixed case. Since "PhysicalDrive<n>" is
+tedious to write, a shortened form of "PD<n>" is permitted by all
+utilities in this package.
+.PP
+A single device (e.g. a disk) can have many device names. For
+example: "PD0" can also be "C:", "D:" and "SCSI0:0,1,0". The two volume names
+reflect that the disk has two partitions on it. Disk partitions that are
+not recognised by Windows are not usually given a volume name. However
+Vista does show a volume name for a disk which has no partitions recognised
+by it and when selected invites the user to format it (which may be rather
+unfriendly to other OSes).
+.PP
+These utilities assume a given device name is in the Win32 device namespace.
+To make that explicit "\\\\.\\" can be prepended to the device names mentioned
+in this section. Beware that backslash is an escape character in Unix like
+shells and the C programming language. In a shell like Msys (from MinGW)
+each backslash may need to be typed twice.
+.PP
+The sg_scan utility lists out Windows device names in forms that are
+suitable for other utilities in this package to use.
 .SH FREEBSD DEVICE NAMING
 SCSI disks have block names of the form /dev/da<num> where <num> is an
 integer starting at zero. The "da" is replaced by "sa" for SCSI tape
@@ -142,47 +183,6 @@ the 'format' command" advice works but seems a very dangerous way to list
 devices. [It does prompt again before doing any damage.] 'devfsadm -Cv'
 cleans out the clutter in the /dev/rdsk directory, only leaving what
 is "live". The "cfgadm -v" command looks promising.
-.SH WINDOWS DEVICE NAMING
-Storage and related devices can have several device names in Windows.
-Probably the most common in the volume name (e.g. "D:"). There are also
-a "class" device names such as "PhysicalDrive<n>", "CDROM<n>"
-and "TAPE<n>". <n> is an integer starting at 0 allocated in ascending
-order as devices are discovered (and sometimes rediscovered).
-.PP
-Some storage devices have a SCSI lower level device name which starts
-with a SCSI (pseudo) adapter name of the form "SCSI<n>:". To this is added
-sub\-addressing in the form of a "bus" number, a "target" identifier and
-a "lun" (logical unit number). The "bus" number is also known as a "PathId".
-These are assembled to form a device name of the
-form: "SCSI<n>:<bus>,<target>,<lun>". The trailing ",<lun>" may be omitted
-in which case a lun of zero is assumed. This lower level device name cannot
-often be used directly since Windows blocks attempts to use it if a class
-driver has "claimed" the device. There are SCSI device types (e.g.
-Automation/Drive interface type) for which there is no class driver. At
-least two transports ("bus types" in Windows jargon): USB and IEEE 1394 do
-not have a "scsi" device names of this form.
-.PP
-In keeping with DOS file system conventions, the various device names
-can be given in upper, lower or mixed case. Since "PhysicalDrive<n>" is
-tedious to write, a shortened form of "PD<n>" is permitted by all
-utilities in this package.
-.PP
-A single device (e.g. a disk) can have many device names. For
-example: "PD0" can also be "C:", "D:" and "SCSI0:0,1,0". The two volume names
-reflect that the disk has two partitions on it. Disk partitions that are
-not recognised by Windows are not usually given a volume name. However
-Vista does show a volume name for a disk which has no partitions recognised
-by it and when selected invites the user to format it (which may be rather
-unfriendly to other OSes).
-.PP
-These utilities assume a given device name is in the Win32 device namespace.
-To make that explicit "\\\\.\\" can be prepended to the device names mentioned
-in this section. Beware that backslash is an escape character in Unix like
-shells and the C programming language. In a shell like Msys (from MinGW)
-each backslash may need to be typed twice.
-.PP
-The sg_scan utility lists out Windows device names in forms that are
-suitable for other utilities in this package to use.
 .SH EXIT STATUS
 To aid scripts that call these utilities, the exit status is set to indicate
 success (0) or failure (1 or more). Note that some of the lower values
@@ -382,7 +382,9 @@ Some utilities that the author has found useful have been placed in
 the 'utils' subdirectory.
 .SH WEB SITE
 There is a web page discussing this package at 
-http://sg.danny.cz/sg/sg3_utils.html .
+http://sg.danny.cz/sg/sg3_utils.html . The device naming used by this
+package on various operating system is discussed in the page:
+http://sg.danny.cz/sg/device_name.html .
 .SH AUTHORS
 Written by Douglas Gilbert. Some utilities have been contributed, see the
 CREDITS file and individual source files (in the 'src' directory).
